[workspace]
resolver = "2"
members = [
    "prover"
]
[workspace.package]
version = "0.1.0"
edition = "2021"
[workspace.dependencies]
axum = { version = "0.7.5", features = ["http2", "macros", "multipart", "ws"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.37"
serde_json = "1.0.116"
tempfile = "3.12.0"