[workspace]
resolver = "2"
members = ["prover", "common", "prover-sdk"]
[workspace.package]
version = "0.1.0"
edition = "2021"
[workspace.dependencies]
axum = { version = "0.7.5", features = ["http2", "macros", "multipart", "ws"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0.63"
serde_json = "1.0.127"
tempfile = "3.12.0"
serde = { version = "1.0.209", features = ["derive"] }
common = { path = "common" }
reqwest = "0.12.7"
url = "2.5.2"