[package]
name = "prover-sdk"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
common.workspace = true
ed25519-dalek.workspace = true
http.workspace = true
hyper-util.workspace = true
prefix-hex.workspace = true
rand.workspace = true
reqwest_cookie_store.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
