[package]
name = "prover"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true